--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,12 @@
   </modules>
 
   <distributionManagement>
-    <site>
-      <id>site-server</id>
-      <name>Test Project Site</name>
-      <url>file:///tmp/maven-project-site</url>
-    </site>
-  </distributionManagement>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>e3271119b5a2-snapshots</name>
+        <url>http://192.168.0.101:8081/artifactory/libs-snapshot</url>
+    </snapshotRepository>
+</distributionManagement>
 
   <build>
     <plugins>
