--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <distributionManagement>
     <snapshotRepository>
         <id>snapshots</id>
-        <name>e3271119b5a2-snapshots</name>
+        <name>TG-Capstone-snapshots</name>
         <url>http://192.168.0.101:8081/artifactory/libs-snapshot</url>
     </snapshotRepository>
 </distributionManagement>
